--- a/E91/try.ipynb
+++ b/E91/try.ipynb
@@ -149,55 +149,50 @@
    "source": [
     "# function that calculates CHSH correlation value\n",
     "def chsh_corr(result):\n",
-    "    \n",
+    "\n",
+    "    f = result.get_counts()\n",
+    "\n",
     "    # lists with the counts of measurement results\n",
     "    # each element represents the number of (-1,-1), (-1,1), (1,-1) and (1,1) results respectively\n",
-    "    countA1B1 = [0, 0, 0, 0] # XW observable\n",
-    "    countA1B3 = [0, 0, 0, 0] # XV observable\n",
-    "    countA3B1 = [0, 0, 0, 0] # ZW observable\n",
-    "    countA3B3 = [0, 0, 0, 0] # ZV observable\n",
+    "    XW = [0, 0, 0, 0] # XW observable\n",
+    "    XV = [0, 0, 0, 0] # XV observable\n",
+    "    ZW = [0, 0, 0, 0] # ZW observable\n",
+    "    ZV = [0, 0, 0, 0] # ZV observable\n",
+    "    search = [\"00\", \"01\", \"10\", \"11\"]\n",
     "\n",
     "    for i in range(singlets_sent):\n",
     "\n",
-    "        res = list(result.get_counts(circuits[i]).keys())[0]\n",
+    "        res = list(f[i].keys())[0]\n",
     "\n",
     "        # if the spins of the qubits of the i-th singlet were projected onto the a_1/b_1 directions\n",
-    "        if (aliceMeasurementChoices[i] == 1 and bobMeasurementChoices[i] == 1):\n",
+    "        if (bases[\"alice\"][i] == 1 and bases[\"bob\"][i] == 1):\n",
     "            for j in range(4):\n",
-    "                if abPatterns[j].search(res):\n",
-    "                    countA1B1[j] += 1\n",
+    "                if res.endswith(search[j]):\n",
+    "                    XW[j] += 1\n",
     "\n",
-    "        if (aliceMeasurementChoices[i] == 1 and bobMeasurementChoices[i] == 3):\n",
+    "        if (bases[\"alice\"][i] == 1 and bases[\"bob\"][i] == 3):\n",
     "            for j in range(4):\n",
-    "                if abPatterns[j].search(res):\n",
-    "                    countA1B3[j] += 1\n",
+    "                if res.endswith(search[j]):\n",
+    "                    XV[j] += 1\n",
     "\n",
-    "        if (aliceMeasurementChoices[i] == 3 and bobMeasurementChoices[i] == 1):\n",
+    "        if (bases[\"alice\"][i] == 3 and bases[\"bob\"][i] == 1):\n",
     "            for j in range(4):\n",
-    "                if abPatterns[j].search(res):\n",
-    "                    countA3B1[j] += 1\n",
-    "                    \n",
+    "                if res.endswith(search[j]):\n",
+    "                    ZW[j] += 1\n",
+    "\n",
     "        # if the spins of the qubits of the i-th singlet were projected onto the a_3/b_3 directions\n",
-    "        if (aliceMeasurementChoices[i] == 3 and bobMeasurementChoices[i] == 3):\n",
+    "        if (bases[\"alice\"][i] == 3 and bases[\"bob\"][i] == 3):\n",
     "            for j in range(4):\n",
-    "                if abPatterns[j].search(res):\n",
-    "                    countA3B3[j] += 1\n",
-    "                    \n",
-    "    # number of the results obtained from the measurements in a particular basis\n",
-    "    total11 = sum(countA1B1)\n",
-    "    total13 = sum(countA1B3)\n",
-    "    total31 = sum(countA3B1)\n",
-    "    total33 = sum(countA3B3)      \n",
-    "                    \n",
+    "                if res.endswith(search[j]):\n",
+    "                    ZV[j] += 1   \n",
+    "\n",
     "    # expectation values of XW, XV, ZW and ZV observables (2)\n",
-    "    expect11 = (countA1B1[0] - countA1B1[1] - countA1B1[2] + countA1B1[3])/total11 # -1/sqrt(2)\n",
-    "    expect13 = (countA1B3[0] - countA1B3[1] - countA1B3[2] + countA1B3[3])/total13 # 1/sqrt(2)\n",
-    "    expect31 = (countA3B1[0] - countA3B1[1] - countA3B1[2] + countA3B1[3])/total31 # -1/sqrt(2)\n",
-    "    expect33 = (countA3B3[0] - countA3B3[1] - countA3B3[2] + countA3B3[3])/total33 # -1/sqrt(2) \n",
-    "    \n",
-    "    corr = expect11 - expect13 + expect31 + expect33 # calculate the CHSC correlation value (3)\n",
-    "    \n",
-    "    return corr"
+    "    expMaMa = (XW[0] - XW[1] - XW[2] + XW[3])/sum(XW) # -1/sqrt(2)\n",
+    "    expMaMc = (XV[0] - XV[1] - XV[2] + XV[3])/sum(XV) # 1/sqrt(2)\n",
+    "    expMcMa = (ZW[0] - ZW[1] - ZW[2] + ZW[3])/sum(ZW) # -1/sqrt(2)\n",
+    "    expMcMc = (ZV[0] - ZV[1] - ZV[2] + ZV[3])/sum(ZV) # -1/sqrt(2) \n",
+    "\n",
+    "    return expMaMa - expMaMc + expMcMa + expMcMc"
    ]
   }
  ],
